frontend stuff: fixed long username pushing img off screen, navbar changes, responsive design

--- a/safe_route/src/components/CrimeMap.module.css
+++ b/safe_route/src/components/CrimeMap.module.css
@@ -59,8 +59,15 @@ body {
     width: 100px;
     height: 100px;
     margin-right: 3vw;
-
     border-radius: 50px;
+}
+
+.profile h2 {
+    margin: 0;
+    overflow: hidden;
+    text-overflow: ellipsis; 
+    white-space: nowrap; 
+    max-width: calc(100% - 40px); 
 }
 
 .toggleButtonDay {
